# ai--

./: .gitignore  back.json  front.json
backend/: pyproject.toml  setup.py
backend/app/: config.py  db.py  main.py
backend/app/routes/: __init__.py  auth.py  chat.py  papers.py  questions.py
backend/app/services/: auth_service.py  llm_service.py  local_ocr_service.py  ocr_service.py
backend/app/utils/: validators.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  unocss.config.ts  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: auth.ts  chat.ts  paper.ts  question.ts
frontend/src/components/: AnswerPreview.tsx  inde.rule.md
frontend/src/context/: AuthContext.tsx  ChatContext.tsx  PaperContext.tsx
frontend/src/types/: index.ts
frontend/src/utils/: device.ts  handwriting.ts  validators.ts
frontend/src/views/header/: UserProfile.tsx  index.tsx
frontend/src/views/home/: index.rule.md  index.tsx
frontend/src/views/home/CenterPanel/: OcrResult.tsx  QuestionEditor.tsx  index.tsx
frontend/src/views/home/LeftPanel/: HistoryList.tsx  PaperUploader.tsx  index.tsx
frontend/src/views/home/RightPanel/: AiChat.tsx  index.tsx
